--- a/progress.html
+++ b/progress.html
@@ -417,7 +417,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌈 슬로 웨어 크루 </h1>
+            <h1>슬로우 웨어 크루</h1>
             <p>주차별 감각 반응 평가</p>
         </div>
 
