--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌈 슬로우 웨어 크루</h1>
+            <h1>슬로우 웨어 크루</h1>
             <p>설문 선택 및 접속</p>
         </div>
 
