--- a/admin.html
+++ b/admin.html
@@ -430,13 +430,13 @@
         import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
 
         const firebaseConfig = {
-            apiKey: "AIzaSyDhr2log5bGn37JccHBlrszWXirTlLaMbI",
-            authDomain: "slowwearclub.firebaseapp.com",
-            databaseURL: "https://slowwearclub-default-rtdb.firebaseio.com",
-            projectId: "slowwearclub",
-            storageBucket: "slowwearclub.firebasestorage.app",
-            messagingSenderId: "828699372373",
-            appId: "1:828699372373:web:50eb9dd634b892d95e8dcd"
+            apiKey: "AIzaSyCIjXYco5ydEsXcap0kq2hvRstNT4vjorY",  // ← 변경
+            authDomain: "slow-wear-crew.firebaseapp.com",  // ← 변경
+            databaseURL: "https://slow-wear-crew-default-rtdb.asia-southeast1.firebasedatabase.app",  // ← 변경
+            projectId: "slow-wear-crew",  // ← 변경
+            storageBucket: "slow-wear-crew.firebasestorage.app",  // ← 변경
+            messagingSenderId: "281669334869",  // ← 변경
+            appId: "1:281669334869:web:e8ebacf777c25127a5e1dc"  // ← 변경
         };
 
         const app = initializeApp(firebaseConfig);
