--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slow Wear Club - Admin</title>
+    <title>Slow Wear Crew - Admin</title>
     <style>
         * {
             margin: 0;
@@ -347,7 +347,7 @@
             <div id="loginError" class="error-message"></div>
             <div class="input-group">
                 <label>Email</label>
-                <input type="email" id="adminEmail" placeholder="admin@slowwearclub.com">
+                <input type="email" id="adminEmail" placeholder="admin@slowwearcrew.com">
             </div>
             <div class="input-group">
                 <label>Password</label>
@@ -358,7 +358,7 @@
 
         <!-- Admin 패널 -->
         <div id="adminPanel" class="admin-panel hidden">
-            <h1>📊 Slow Wear Club Admin</h1>
+            <h1>📊 Slow Wear Crew Admin</h1>
             
             <div class="user-info">
                 <span>Logged in as: <span class="user-email" id="userEmail"></span></span>
