--- a/admin.html
+++ b/admin.html
@@ -604,6 +604,7 @@
                 
                 return {
                     participantId,
+                    petName: participant.pet,
                     accessCode: participant.accessCode,
                     lastAccess: participant.lastAccess,
                     week1: responses.week1?.sensory || null,
@@ -681,7 +682,7 @@
                     <div class="response-item">
                         <div class="response-header">
                             <div>
-                                <span class="participant-id">${participant.participantId}</span>
+                                <span class="participant-id">${participant.participantId} - ${participants.petName}</span>
                                 ${statusBadge}
                                 <div style="font-size: 12px; color: #999; margin-top: 5px;">
                                     Access Code: ${participant.accessCode} | Last Access: ${new Date(participant.lastAccess).toLocaleString('ko-KR')}
