--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,11 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/admin.css">
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-auth-compat.js"></script>
 </head>
 <body>
     <div class="container">
@@ -94,6 +99,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script type="module" src="js/admin.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
